foundation-objs/main/default/objects/Additional_GSTIN__c/Additional_GSTIN__c.object-meta.xml
<CustomObject>
    <label>Additional GSTIN</label>
    <nameField>
        <label>GSTIN</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Additional GSTINs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>