foundation-objs/main/default/objects/Additional_GSTIN__c/fields/Add_on_split__c.field-meta.xml
<CustomField>
    <fullName>Add_on_split__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Add-on split</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>