foundation-objs/main/default/objects/Additional_GSTIN__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <label>Address Line 1</label>
    <type>TextArea</type>
</CustomField>