foundation-objs/main/default/objects/Additional_GSTIN__c/fields/Address_Line_2__c.field-meta.xml
<CustomField>
    <fullName>Address_Line_2__c</fullName>
    <label>Address Line 2</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>