foundation-objs/main/default/objects/Additional_GSTIN__c/fields/Asset__c.field-meta.xml
<CustomField>
    <fullName>Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Asset</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Billing ID</relationshipLabel>
    <relationshipName>Billing_ID</relationshipName>
    <type>Lookup</type>
</CustomField>