foundation-objs/main/default/objects/Additional_GSTIN__c/fields/Billing_ID_18_Digit__c.field-meta.xml
<CustomField>
    <fullName>Billing_ID_18_Digit__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <label>Billing ID(18 Digit)</label>
    <type>Text</type>
</CustomField>