foundation-objs/main/default/objects/Additional_GSTIN__c/fields/Billing_PAN__c.field-meta.xml
<CustomField>
    <fullName>Billing_PAN__c</fullName>
    <label>Billing PAN</label>
    <length>10</length>
    <type>Text</type>
</CustomField>