foundation-objs/main/default/objects/Additional_GSTIN__c/fields/Name_Of_The_Customer__c.field-meta.xml
<CustomField>
    <fullName>Name_Of_The_Customer__c</fullName>
    <label>Name Of The Customer</label>
    <length>100</length>
    <type>Text</type>
</CustomField>