foundation-objs/main/default/objects/Additional_GSTIN__c/fields/OTP_Integration__c.field-meta.xml
<CustomField>
    <fullName>OTP_Integration__c</fullName>
    <label>OTP/ Integration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>