foundation-objs/main/default/objects/Additional_GSTIN__c/fields/Pincode__c.field-meta.xml
<CustomField>
    <fullName>Pincode__c</fullName>
    <label>Pincode</label>
    <length>7</length>
    <type>Text</type>
</CustomField>