foundation-objs/main/default/objects/Additional_GSTIN__c/fields/Quote__c.field-meta.xml
<CustomField>
    <fullName>Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote</label>
    <referenceTo>Quote</referenceTo>
    <relationshipLabel>Additional GSTINs</relationshipLabel>
    <relationshipName>Additional_GSTINs</relationshipName>
    <type>Lookup</type>
</CustomField>