foundation-objs/main/default/objects/Additional_GSTIN__c/fields/Quote_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Quote_Line_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote Line Item</label>
    <referenceTo>QuoteLineItem</referenceTo>
    <relationshipLabel>Additional GSTINs</relationshipLabel>
    <relationshipName>Additional_GSTINs</relationshipName>
    <type>Lookup</type>
</CustomField>