foundation-objs/main/default/objects/Additional_GSTIN__c/fields/SEZ_Yes_No__c.field-meta.xml
<CustomField>
    <fullName>SEZ_Yes_No__c</fullName>
    <label>SEZ (Yes/No)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>