foundation-objs/main/default/objects/Additional_GSTIN__c/fields/TAN__c.field-meta.xml
<CustomField>
    <fullName>TAN__c</fullName>
    <label>TAN</label>
    <length>10</length>
    <type>Text</type>
</CustomField>