foundation-objs/main/default/objects/Additional_GSTIN__c/fields/Upsell_Top_up__c.field-meta.xml
<CustomField>
    <fullName>Upsell_Top_up__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Upsell - Top-up</label>
    <referenceTo>Upsell_Top_up__c</referenceTo>
    <relationshipLabel>Additional GSTINs</relationshipLabel>
    <relationshipName>Additional_GSTINs</relationshipName>
    <type>Lookup</type>
</CustomField>