foundation-objs/main/default/objects/Additional_GSTIN__c/validationRules/Billing_GSTIN_Should_Be_Of_15_Characters.validationRule-meta.xml
<ValidationRule>
    <fullName>Billing_GSTIN_Should_Be_Of_15_Characters</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISBLANK(  Name )), LEN(  Name ) &lt;&gt; 15 )</errorConditionFormula>
    <errorMessage>Not a valid GSTIN. Please Enter 15 characters in Billing GSTIN</errorMessage>
</ValidationRule>